[project]
name = "timeline-sync"
version = "0.1.0"
description = "Sync Home Assistant location history to Google Calendar"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "google-api-python-client>=2.120",
    "google-auth-oauthlib>=1.2",
    "python-dotenv>=1.0",
]

[project.scripts]
timeline-sync = "timeline_sync.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/timeline_sync"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
